# cfb-schedule-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sync-schedule.yml
docs/: README.md  cfb_acc.ics  cfb_b12.ics  cfb_b1g.ics  cfb_maryland.ics  cfb_schedule.ics  cfb_sec.ics  index.html
src/cfb_tracker/: __init__.py  api.py  calendar.py  cli.py  config.py
tests/: __init__.py  test_tracker.py
